--- a/main.html
+++ b/main.html
@@ -3,11 +3,75 @@
 <html>
 
 <head>
+	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="container">
+        <!-- Row 1 -->
+        <div class="row">
+            <!-- Medium Screen -->
+            <div class="col-md-4 col-lg-4 row1-col1">
+                <!-- 1/3 of total width on medium screens -->
+                Medium Screen - Column 1
+            </div>
+            <div class="col-md-8 col-lg-8 row1-col2">
+                <!-- 2/3 of total width on medium screens -->
+                Medium Screen - Column 2
+            </div>
+
+            <!-- Small Screen -->
+            <div class="col-6 row1-col1">
+                <!-- Equally divided on small screens -->
+                Small Screen - Column 1
+            </div>
+            <div class="col-6 row1-col2">
+                <!-- Equally divided on small screens -->
+                Small Screen - Column 2
+            </div>
+        </div>
+
+        <!-- Row 2 -->
+        <div class="row">
+            <!-- Medium Screen -->
+            <div class="col-md-4 col-md-offset-2 col-lg-4 offset-lg-2 row2-col1">
+                <!-- 1/3 of total width, offset by 2 on medium screens -->
+                Medium Screen - Column 1
+            </div>
+            <div class="col-md-4 col-lg-4 row2-col2">
+                <!-- 1/3 of total width on medium screens -->
+                Medium Screen - Column 2
+            </div>
+        </div>
+
+        <!-- Row 3 -->
+        <div class="row justify-content-center">
+            <!-- Medium Screen -->
+            <div class="col-md-4 col-lg-4 row3-col1">
+                <!-- 1/3 of total width on medium screens -->
+                Medium Screen - Column 1
+            </div>
+            <div class="col-md-4 col-lg-4 row3-col2">
+                <!-- 1/3 of total width on medium screens -->
+                Medium Screen - Column 2
+            </div>
+
+            <!-- Small Screen -->
+            <div class="col-6 row3-col1">
+                <!-- Equal space on small screens -->
+                Small Screen - Column 1
+            </div>
+            <div class="col-6 row3-col2">
+                <!-- Equal space on small screens -->
+                Small Screen - Column 2
+            </div>
+        </div>
+    </div>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="./script.js">
 </script>
 
